[gd_scene load_steps=4 format=3 uid="uid://dspnikvhsnilf"]

[ext_resource type="Texture2D" uid="uid://cdeaoj1td5f7" path="res://Sprites/shield.png" id="1_l38jq"]
[ext_resource type="Script" path="res://Scripts/Shield.gd" id="1_nappp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbr10"]
size = Vector2(227, 11)

[node name="Shield" type="Node2D"]
script = ExtResource("1_nappp")

[node name="Shield" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(114, 6)
texture = ExtResource("1_l38jq")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(113.5, 5.5)
shape = SubResource("RectangleShape2D_mbr10")

[node name="FadeOutTimer" type="Timer" parent="."]

[node name="FadeInTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 30.0

[connection signal="timeout" from="FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
[connection signal="timeout" from="FadeInTimer" to="." method="_on_fade_in_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
